force-app/main/default/objects/Price_List__mdt/Price_List__mdt.object-meta.xml
<CustomObject>
    <description>This stores the mapping of price type, currency and price list name to be stamped on the opportunity and quote.</description>
    <label>Price List</label>
    <pluralLabel>Price Lists</pluralLabel>
</CustomObject>