force-app/main/default/objects/Price_List__mdt/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <description>Metadata field to store Price list</description>
    <label>Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>