force-app/main/default/objects/Price_List__mdt/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <description>Metadata field to store Price list type </description>
    <label>Price List Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>