force-app/main/default/objects/Price_List__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Metadata field to store Region </description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>